--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DevForum">
         <activity
-<<<<<<< HEAD
+            android:name=".register_activity"
+            android:exported="false" />
+        <activity
             android:name=".account_details_activity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-=======
+            android:exported="true"></activity>
+        <activity
             android:name=".login_activity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".competitiondetails"
-            android:exported="true" >
-        </activity>
-        <activity
-            android:name=".homescreen_student"
->>>>>>> 219b210cfd196fc00e7f4eaf8d9a55aee6cd001a
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".competitiondetails"
+            android:exported="true"></activity>
+        <activity
+            android:name=".homescreen_student"
+            android:exported="true"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
